# MTConnect-SmartSaw

./: .gitignore  ChangeLog.md  README.md  docker-compose.yml  env.sh  ipcDashboardService.sh  lib.sh  ssClean.sh  ssInstall.sh  ssStatus.sh  ssUpgrade.sh
ipc_dashboard/: README.md  ipc-dashboard.service  ipc_service.sh  pyproject.toml  requirements.txt
ipc_dashboard/backend/common/: backend_api.py  backend_config.py  backend_logger.py  backend_main.py  backend_sessionmgr.py  backend_ssemanager.py  backend_utils.py  beapi_certdownload.py  beapi_filemanager.py  beapi_ipcclean.py  beapi_ipcinstall.py  beapi_ipclogs.py  beapi_ipcmanager.py  beapi_ipcstatus.py  beapi_ipcupgrade.py  beapi_userauth.py
ipc_dashboard/backend/config/: backend_ipc_config.json
ipc_dashboard/backend/fastapi/: fastapi_backend.py  fastapi_certdownload.py  fastapi_datatypes.py  fastapi_filemanager.py  fastapi_ipcclean.py  fastapi_ipcinstall.py  fastapi_ipclogs.py  fastapi_ipcstatus.py  fastapi_ipcupgrade.py  fastapi_main.py  fastapi_userauth.py  fastapi_utils.py
ipc_dashboard/config/: backend_ipc_config.json
ipc_dashboard/frontend/: index.html
ipc_dashboard/frontend/css/: control.css  dashboard.css  layout.css  loader.css  login.css  styles.css  toast.css
ipc_dashboard/frontend/css/control/: clean.css  (+3 more)
ipc_dashboard/frontend/html/: control.html  dashboard.html  device.html  security.html
ipc_dashboard/frontend/images/: logo3.jfif
ipc_dashboard/frontend/js/: api.js  app.js  dashboard.js  login.js
ipc_dashboard/frontend/public/: fonts.css
ipc_dashboard/services/: ipc-dashboard.service
(+70 files in other folders)
