[project]
name = "ipc-dashboard"
version = "0.1.0"
description = "IPC Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.7",
    "fastapi>=0.135.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
    "docker>=7.1.0",
    "python-multipart>=0.0.27",
    "python-dateutil>=2.9.0.post0"
]
